--- a/styles/external.css
+++ b/styles/external.css
@@ -51,19 +51,20 @@
     font-weight: 700;
     line-height: normal;
 }
-.banner-img{
+
+.banner-img {
     /* background: url(<path-to-image>), lightgray 50% / cover no-repeat; */
     width: 635px;
-height: 800px;
-flex-shrink: 0;
-margin: 50px 240px 0px 1045px;
+    height: 800px;
+    flex-shrink: 0;
+    margin: 50px 240px 0px 1045px;
 }
 
 /* main section */
-.m-head{
+.m-head {}
 
-}
-.s-h{color: #272727;
+.s-h {
+    color: #272727;
     text-align: center;
     font-family: Lato;
     font-size: 40px;
@@ -71,4 +72,70 @@ margin: 50px 240px 0px 1045px;
     font-weight: 800;
     line-height: normal;
 
+}
+
+.p-sec {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+.image{
+    display: flex;
+    text-align: center;
+    padding: 208px 240px 0 240px;
+    align-items: center;
+    justify-content: center;
+}
+.img-main {
+    width: 310px;
+    height: 428px;
+    flex-shrink: 0;
+    padding: 110px 78px 0 ;background-position: center;
+    background: ;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+.main-pp{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: 35px; /* 145.833% */
+text-decoration-line: underline;
+}
+.img-mai{
+    width: 370px;
+height: 370px;
+flex-shrink: 0;
+padding: 117px 47px 0;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+width: 464px;
+height: 538px;
+flex-shrink: 0;
+border-radius: 300px 300px 0px 0px;
+background: rgba(5, 151, 160, 0.15);
+margin: 20px;
+}
+.img-man{
+    width: 314px;
+height: 471px;
+flex-shrink: 0;
+padding: 62px 78px;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+width: 464px;
+height: 538px;
+flex-shrink: 0;
+border-radius: 300px 300px 0px 0px;
+background: rgba(71, 125, 17, 0.15);
 }
